[feat][dingo-calcite] Solve the problem of case sensitivity and be compatible with MySQL