@@ -83,6 +83,9 @@ import static io.dingodb.common.mysql.error.ErrorCode.ErrInvalidDDLState;
 import static io.dingodb.common.mysql.error.ErrorCode.ErrKeyDoesNotExist;
 import static io.dingodb.common.mysql.error.ErrorCode.ErrNoSuchTable;
 import static io.dingodb.common.mysql.error.ErrorCode.ErrPartitionMgmtOnNonpartitioned;
+import static io.dingodb.common.util.NameCaseUtils.caseSensitive;
+import static io.dingodb.common.util.NameCaseUtils.convertName;
+import static io.dingodb.common.util.NameCaseUtils.convertSql;
 import static io.dingodb.sdk.service.entity.common.SchemaState.SCHEMA_DELETE_ONLY;
 import static io.dingodb.sdk.service.entity.common.SchemaState.SCHEMA_DELETE_REORG;
 import static io.dingodb.sdk.service.entity.common.SchemaState.SCHEMA_NONE;
@@ -187,9 +190,8 @@ public class DdlWorker {
         }
         String ids = job.job2TableIDs();
         DingoMetrics.counter("registerMDLInfoNone").inc();
-        // TODO
         String sql = "insert into mysql.dingo_mdl_info (job_id, version, table_ids) values (%d, %d, %s)";
-        sql = String.format(sql, job.getId(), ver, Utils.quoteForSql(ids));
+        sql = convertSql(String.format(sql, job.getId(), ver, Utils.quoteForSql(ids)));
         return session.executeUpdate(sql);
     }
 
@@ -553,7 +555,7 @@ public class DdlWorker {
                 Table table = InfoSchemaService.root().getTableDef(job.getSchemaId(), job.getTableId());
                 List<IndexTable> diskAnnIndex = table.getIndexes().stream()
                     .filter(e -> e.getIndexType() == IndexType.VECTOR_DISKANN)
-                    .collect(Collectors.toList());
+                    .toList();
                 for (IndexTable indexTable : diskAnnIndex) {
                     // check disk ann index status
                     Pair<Boolean, String> checkDropDiskAnn =
@@ -626,7 +628,8 @@ public class DdlWorker {
             return Pair.of(0L, "table not exists");
         }
         boolean exists = table.getIndexes().stream()
-            .anyMatch(indexTable -> indexTable.getName().equalsIgnoreCase(indexInfo.getName())
+            .anyMatch(indexTable -> (caseSensitive() ? indexTable.getName().equals(indexInfo.getName())
+                : indexTable.getName().equalsIgnoreCase(indexInfo.getName()))
                 && indexTable.getSchemaState() == SchemaState.SCHEMA_PUBLIC);
         if (exists) {
             job.setState(JobState.jobStateCancelled);
@@ -713,7 +716,7 @@ public class DdlWorker {
             indexName = job.getArgs().get(0).toString();
         }
         boolean notExists = table.getIndexes().stream()
-            .noneMatch(indexTable -> indexTable.getName().equalsIgnoreCase(indexName));
+            .noneMatch(indexTable -> indexTable.getName().equals(indexName));
         if (notExists) {
             job.setState(JobState.jobStateCancelled);
             return Pair.of(0L, "index not exists");
@@ -1059,9 +1062,10 @@ public class DdlWorker {
         io.dingodb.common.table.ColumnDefinition oldColDef = modifyingColInfo.getChangingCol();
         io.dingodb.common.table.ColumnDefinition newColDef = modifyingColInfo.getNewCol();
         // If we want to rename the column name, we need to check whether it already exists.
-        if (oldColDef != null && !oldColDef.getName().equals(newColDef.getName())) {
+        if (oldColDef != null && !oldColDef.getName().equalsIgnoreCase(newColDef.getName())) {
             boolean dupColName = tableWithId.getTableDefinition().getColumns()
-                .stream().anyMatch(columnDefinition -> columnDefinition.getName().equals(newColDef.getName()));
+                .stream()
+                .anyMatch(columnDefinition -> columnDefinition.getName().equalsIgnoreCase(newColDef.getName()));
             if (dupColName) {
                 job.setState(JobState.jobStateCancelled);
                 job.setDingoErr(DingoErrUtil.newInternalErr(ErrDupFieldName, newColDef.getName()));
@@ -1486,7 +1490,7 @@ public class DdlWorker {
         int colIndex = -1;
         for (int i = 0; i < definitionWithId.getTableDefinition().getColumns().size(); i++) {
             ColumnDefinition col = definitionWithId.getTableDefinition().getColumns().get(i);
-            if (col.getName().equals(modifyColumnInfo.getOldColName())) {
+            if (col.getName().equalsIgnoreCase(modifyColumnInfo.getOldColName())) {
                 colIndex = i;
                 break;
             }
@@ -1501,7 +1505,7 @@ public class DdlWorker {
             AtomicInteger idx = new AtomicInteger(-1);
             for (int i = 0; i < indexTable.getColumns().size(); i++) {
                 Column col = indexTable.getColumns().get(i);
-                if (col.getName().equals(modifyColumnInfo.getOldColName())) {
+                if (col.getName().equalsIgnoreCase(modifyColumnInfo.getOldColName())) {
                     idx.set(i);
                     break;
                 }
@@ -1538,7 +1542,7 @@ public class DdlWorker {
                 int colIndex = -1;
                 for (int i = 0; i < definitionWithId.getTableDefinition().getColumns().size(); i++) {
                     ColumnDefinition col = definitionWithId.getTableDefinition().getColumns().get(i);
-                    if (col.getName().equals(modifyColumnInfo.getOldColName())) {
+                    if (col.getName().equalsIgnoreCase(modifyColumnInfo.getOldColName())) {
                         colIndex = i;
                         break;
                     }
@@ -1561,7 +1565,7 @@ public class DdlWorker {
                     AtomicInteger idx = new AtomicInteger(-1);
                     for (int i = 0; i < indexTable.getColumns().size(); i++) {
                         Column col = indexTable.getColumns().get(i);
-                        if (col.getName().equals(modifyColumnInfo.getOldColName())) {
+                        if (col.getName().equalsIgnoreCase(modifyColumnInfo.getOldColName())) {
                             idx.set(i);
                             break;
                         }
@@ -1900,7 +1904,7 @@ public class DdlWorker {
                 .map(idxTable -> (TableDefinitionWithId) idxTable)
                 .filter(idxTable ->
                     idxTable.getTableDefinition().getName().endsWith(originName)
-                        || idxTable.getTableDefinition().getName().endsWith(originName.toUpperCase())).findFirst().orElse(null);
+                        || idxTable.getTableDefinition().getName().endsWith(originName)).findFirst().orElse(null);
             if (indexWithId == null) {
                 job.setDingoErr(DingoErrUtil.newInternalErr(ErrKeyDoesNotExist, originName, job.getTableName()));
                 return Pair.of(0L, job.getDingoErr().errorMsg);
@@ -1908,7 +1912,7 @@ public class DdlWorker {
             TableDefinitionWithId toIndex = indexList.stream().map(idxTable -> (TableDefinitionWithId) idxTable)
                 .filter(idxTable ->
                     idxTable.getTableDefinition().getName().endsWith(toName)
-                        || idxTable.getTableDefinition().getName().endsWith(toName.toUpperCase()))
+                        || idxTable.getTableDefinition().getName().endsWith(toName))
                 .findFirst().orElse(null);
             if (toIndex != null) {
                 job.setDingoErr(DingoErrUtil.newInternalErr(ErrDupKeyName, toName));
@@ -1951,7 +1955,7 @@ public class DdlWorker {
         if (tableRes.getValue() != null && tableRes.getKey() == null) {
             return Pair.of(0L, tableRes.getValue());
         }
-        String indexName = job.getArgs().get(0).toString();
+        String indexName = convertName(job.getArgs().get(0).toString());
         String visibleStr = job.getArgs().get(1).toString();
         boolean visible = Boolean.parseBoolean(visibleStr);
         List<Object> indexList = InfoSchemaService.root().allIndex(job.getSchemaId(), job.getTableId());
@@ -1959,7 +1963,7 @@ public class DdlWorker {
             .map(idxTable -> (TableDefinitionWithId)idxTable)
             .filter(idxTable ->
                 idxTable.getTableDefinition().getName().endsWith(indexName)
-                    || idxTable.getTableDefinition().getName().endsWith(indexName.toUpperCase())).findFirst()
+                    || idxTable.getTableDefinition().getName().endsWith(indexName)).findFirst()
                     .orElse(null);
         if (indexWithId == null) {
             job.setDingoErr(DingoErrUtil.newInternalErr(ErrKeyDoesNotExist, indexName, job.getTableName()));
